[package]
name = "iau_constellations"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Webb <oliverwebb8192@gmail.com>"]
description = "IAU Contellation Determination Algorithm in Rust"
license = " GPL-2.0-only"
readme = "README.md"
keywords = ["astronomy"]
repository = "https://github.com/oliverkwebb/iau_constellations_rs"


[dependencies]
